[package]
name = "ConwaySimulator"
version = "0.1.0"
authors = ["Ethan Chapman <ethan.chapman0@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"

[dependencies.sdl2]
version = "0.34.2"
default-features = false
features = ["gfx"]